@@ -17,6 +17,7 @@ depth: 1
  * Ensure that copying page correctly picks up the latest revision (Matt Westcott)
  * Ensure comment buttons always respect `WAGTAILADMIN_COMMENTS_ENABLED` (Thibaud Colas)
  * Fix error when deleting a single snippet through the bulk actions interface (Sage Abdullah)
+ * Pass the correct `for_update` value for `get_form_class` in `SnippetViewSet` edit views (Sage Abdullah)
 
 ### Documentation
 
